# AutoML

./: Makefile  main.py  pyproject.toml
.github/workflows/: api.yaml
app/: app.py  logging.py
app/admin/: router.py
automl/: utils.py
automl/loader/: __init__.py  csv.py
database/: Dockerfile  config.py  logging.py  utils.py
requirements/: base.txt  dev.txt
server/: app.py  logging.py
server/database/: config.py  model.py  utils.py
server/routes/admin/: router.py
server/routes/auth/: router.py  schemas.py  utils.py
server/routes/user/: router.py  schemas.py
tests/: conftest.py  test_register_users.py  test_user_login.py  test_user_upload.py
