[tool.poetry]
name = "automl"
version = "0.1.0"
description = "Automatic machine learning pipeline system that load, analyse and run machine learning algorithm over preprocessed data."
authors = ["Matheus Oliveira de Souza <msouza.os@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
